--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon -r ts-node/register --env-file=.env index.js"
+    "start": "nodemon -r ts-node/register --env-file=.env audio/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,8 @@
     "tiktoken": "^1.0.20"
   },
   "devDependencies": {
-    "@types/node": "^22.13.5",
+    "@types/node": "^22.13.9",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   }
 }
