--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon -r ts-node/register --env-file=.env chroma/index.js"
+    "start": "nodemon -r ts-node/register --env-file=.env langchain/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "dependencies": {
     "chromadb": "^1.10.5",
     "dotenv": "^16.4.7",
+    "langchain": "^0.3.19",
     "openai": "^4.85.4",
     "tiktoken": "^1.0.20"
   },
