--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon -r ts-node/register --env-file=.env langchain/rag/index.js"
+    "start": "nodemon -r ts-node/register --env-file=.env langchain/rag/chromaPdf.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/anthropic": "^0.3.15",
+    "@langchain/community": "^0.3.34",
+    "cheerio": "^1.0.0",
     "chromadb": "^1.10.5",
     "dotenv": "^16.4.7",
     "langchain": "^0.3.19",
     "openai": "^4.85.4",
+    "pdf-parse": "^1.1.1",
     "tiktoken": "^1.0.20"
   },
   "devDependencies": {
