--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon -r ts-node/register --env-file=.env langchain/rag/chromaPdf.js"
+    "start": "nodemon -r ts-node/register --env-file=.env huggingface/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@huggingface/inference": "^2.8.1",
     "@langchain/anthropic": "^0.3.15",
     "@langchain/community": "^0.3.34",
     "cheerio": "^1.0.0",
