--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon -r ts-node/register --env-file=.env huggingface/index.js"
+    "start": "nodemon -r ts-node/register --env-file=.env huggingface/transformer.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "@huggingface/inference": "^2.8.1",
     "@langchain/anthropic": "^0.3.15",
     "@langchain/community": "^0.3.34",
+    "@xenova/transformers": "^2.17.2",
     "cheerio": "^1.0.0",
     "chromadb": "^1.10.5",
     "dotenv": "^16.4.7",
